--- a/frontend/src/app/viewtask/viewtask.component.html
+++ b/frontend/src/app/viewtask/viewtask.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="task != null">
 <h1>{{ task.taskName}} </h1>
  <h4><a [routerLink]="['/taskmanager']">Go Back</a></h4>
 <dl class="list">
