--- a/frontend/src/app/addtask/addtask.component.html
+++ b/frontend/src/app/addtask/addtask.component.html
@@ -1,6 +1,12 @@
 <div class="container">
-  <h1>Add Task</h1>
-  <h4><a [routerLink]="['/taskmanager']">Go Back</a></h4>
+<table>
+      <tr>
+	    <td><h1>Add Task</h1></td>
+		<td><h3>( </h3></td>
+		<td><h3><a [routerLink]="['/taskmanager']">Go Back</a></h3></td>
+		<td><h3> ) </h3></td>
+	  </tr>
+  </table>
   <div class="row">
     <div class="col-md-6">
       <form  #addTaskForm="ngForm">
@@ -10,7 +16,7 @@
         </div>
         <div class="form-group">
           <label for="priority">Priority</label><br/>
-		  0<input type="range" [(ngModel)]="task.priority" min="0" max="100" data-show-value="true" name="priority" required="true"/>100
+		  0&nbsp;<input type="range" [(ngModel)]="task.priority" min="0" max="100" data-show-value="true" name="priority" required="true"/>&nbsp;100
         </div>
       
         <div class="form-group">
