--- a/frontend/src/app/edittask/edittask.component.html
+++ b/frontend/src/app/edittask/edittask.component.html
@@ -15,8 +15,8 @@
           <input type="text" class="form-control" [(ngModel)]="task.taskName" name="name" required>
         </div>
         <div class="form-group">
-          <label for="priority">Priority</label>
-		  0<input type="range" [(ngModel)]="task.priority" min="0" max="100" data-show-value="true" name="priority" required="true"/>100
+          <label for="priority">Priority</label><br/>
+		  0&nbsp;<input type="range" [(ngModel)]="task.priority" min="0" max="100" data-show-value="true" name="priority" required="true"/>&nbsp;100
         </div>
       
         <div class="form-group">
